--- a/etc/cas.properties.template
+++ b/etc/cas.properties.template
@@ -78,9 +78,8 @@ cas.authn.ldap[0].searchFilter=(&(|(uid={user})(mail={user}))(disabledAccount=FA
 # cas.authn.ldap[0].enhanceWithEntryResolver=true
 # cas.authn.ldap[0].derefAliases=NEVER|SEARCHING|FINDING|ALWAYS
 cas.authn.ldap[0].dnFormat=uid=%s,${cas.authn.ldap[0].baseDn}
-cas.authn.ldap[0].principalAttributePassword=userPassword
-cas.authn.ldap[0].passwordEncoder.type=DEFAULT
-
+# VeryImportant!!!!!!!! When it is empty, it delegates the authentication on LDAP libraries
+cas.authn.ldap[0].principalAttributePassword=
 
 # == Connection pooling settings ==
 # https://apereo.github.io/cas/5.3.x/installation/Configuration-Properties-Common.html#ldap-connection-settings
